--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,24 @@ version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: ^3.0.5
+  sdk: ^3.0.6
 
 # Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
+  nyxx: ^5.1.0
+  nyxx_interactions: ^4.6.0
+  schedulers: ^1.0.1
+  drift: ^2.9.0
+  sqlite3_flutter_libs: ^0.5.15
+  path_provider: ^2.0.15
+  path: ^1.8.3
+  io: ^1.0.4
+  intl: ^0.18.1
+  l: ^4.0.2
 
 dev_dependencies:
-  lints: ^2.0.0
-  test: ^1.21.0
+  lints: ^2.1.1
+  test: ^1.24.4
+  build_runner: ^2.4.6
+  drift_dev: ^2.9.0
+
