--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 # https://dart.dev/guides/libraries/private-files
 # Created by `dart pub`
 .dart_tool/
+/.idea/
+/data/config.json
+/data/config_stage.json
