--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,26 +4,25 @@ version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: ^3.1.0
+  sdk: ^3.2.0
 
 # Add regular dependencies here.
 dependencies:
 
   # bot core
-  nyxx: ^6.0.0
+  nyxx: ^6.0.3
 
   # platform
   path_provider: ^2.1.1
-  path: ^1.8.3
+  path: ^1.9.0
   io: ^1.0.4
 
   # database
-  drift: ^2.13.0
-  sqlite3_flutter_libs: ^0.5.17
+  drift: ^2.14.0
+  sqlite3: ^2.2.0
 
   # utils
   l: ^4.0.2
-  schedulers: ^1.0.1
 
   # localization
   intl: ^0.18.1
@@ -32,6 +31,6 @@ dependencies:
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.9
-  build_runner: ^2.4.6
-  drift_dev: ^2.13.0
+  build_runner: ^2.4.7
+  drift_dev: ^2.14.0
 
