--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -28,7 +28,7 @@ analyzer:
 # Additional rule set that aims to:
 # 1. Improve error handling
 # 2. Using strict types
-# 3.
+# 3. Improve code style
 linter:
   rules:
     # https://dart.dev/tools/linter-rules/prefer_const_constructors
@@ -174,7 +174,9 @@ linter:
     # Prefer to use relative imports for files in the same package.
     # https://dart.dev/tools/linter-rules/prefer_relative_imports
     - prefer_relative_imports
-
+    # Prefer to show the possible ways to create class in top.
+    # https://dart.dev/tools/linter-rules/sort_constructors_first
+    - sort_constructors_first
 
     # Flutter specific rules
     #
@@ -190,7 +192,12 @@ linter:
     # Do not use Container class for providing only decoration
     # https://dart.dev/tools/linter-rules/use_decorated_box
     - use_decorated_box
-
-
-
-
+    # Do not use Container just because. Please.
+    # https://dart.dev/tools/linter-rules/avoid_unnecessary_containers
+    - avoid_unnecessary_containers
+    # Provide all the properties of the widget
+    # https://dart.dev/tools/linter-rules/diagnostic_describe_all_properties
+    - diagnostic_describe_all_properties
+    # Well, if you touch BuildContext in async, you need to make sure that it is not disposed.
+    # https://dart.dev/tools/linter-rules/use_build_context_synchronously
+    - use_build_context_synchronously
