--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: lfg_bot
 description: Open-source Discord LFG bot.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/Tembeon/lfg_bot
 
 environment:
-  sdk: ^3.2.0
+  sdk: '>=3.2.0 <3.3.0'
 
 # Add regular dependencies here.
 dependencies:
 
   # bot core
-  nyxx: ^6.0.3
+  nyxx: ^6.1.0
 
   # platform
   path_provider: ^2.1.1
@@ -18,8 +18,8 @@ dependencies:
   io: ^1.0.4
 
   # database
-  drift: ^2.14.0
-  sqlite3: ^2.2.0
+  drift: ^2.14.1
+  sqlite3: ^2.3.0
 
   # utils
   l: ^4.0.2
@@ -30,7 +30,7 @@ dependencies:
 
 dev_dependencies:
   lints: ^3.0.0
-  test: ^1.24.9
+  test: ^1.25.0
   build_runner: ^2.4.7
-  drift_dev: ^2.14.0
+  drift_dev: ^2.14.1
 
