--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: lfg_bot
+name: omega
 description: Open-source Discord LFG bot.
 version: 1.0.0
 repository: https://github.com/Tembeon/lfg_bot
