exit program when exception received

--- a/compose.yml
+++ b/compose.yml
@@ -2,6 +2,8 @@ services:
   app:
     image: omega_bot
     build: .
+    restart:
+      on-failure
     env_file: .env
     volumes:
       - ./data/db:/app/data/db
